syntax = "proto3";

package ekube.workspace.v1;
option go_package = "ekube/api/pb/workspace/v1;workspace";


import "pb/workspace/v1/workspace.proto";
import "ekube/pb/page/page.proto";

// RPC 应用集群管理
service RPC {
  // 查询企业空间列表
  rpc ListWorkspace(ListWorkspaceRequest) returns(WorkspaceSet);
  // 查询企业空间详情
  rpc DescribeWorkspace(DescribeWorkspaceRequest) returns(Workspace);
}

message ListWorkspaceRequest {
  // 分页
  // @gotags: json:"page"
  ekube.page.PageRequest page = 1;
  // 根据用户权限过滤展示
  // @gotags: json:"user_id"
  string user_id = 2;
}


enum DESCRIBE_BY {
  // 通过Id
  ID = 0;
  // 通过名称
  NANE = 1;
}

message DescribeWorkspaceRequest {
  // 获取详情的方式
  // @gotags: json:"describe_by"
  DESCRIBE_BY describe_by = 1;
  // @gotags: json:"id"
  string id = 2;
  // @gotags: json:"name,omitempty"
  string name = 3;
}

message UpdateWorkspaceRequest {

}

message DeleteWorkspaceRequest {
  // 删除workspace
  // @gotags: json:"id"
  string id = 1;
}